<resources>
    <string name="app_name">GridImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="size_label">Size</string>
    <string name="color_label">Color</string>
    <string name="type_lable">Type</string>
    <string name="domain">Domain</string>
    <string name="save_lable">Save</string>


    <string-array name="display_sizes">
        <item>All</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-Large</item>
    </string-array>

    <string-array name="send_sizes">
        <item>All</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-Large</item>
    </string-array>

    <string-array name="display_colors">
        <item>All</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="send_colors">
        <item>All</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="display_types">
        <item>All</item>
        <item>Faces</item>
        <item>Photo</item>
        <item>Clip Art</item>
        <item>Line Art</item>
    </string-array>

    <string-array name="send_types">
        <item>All</item>
        <item>faces</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>

</resources>
